# eech_source_code

./: .gitignore  AppResources.rc  EECH-MSVC.sln  EECH-MSVC.vcproj  EECH-MSVC.vcxproj  LICENCE  Makefile.am  Modules-3d.vcproj  Modules-3d.vcxproj  Modules-3dTerrain.vcproj  Modules-3dTerrain.vcxproj  Modules-Graphics.vcproj  Modules-Graphics.vcxproj  Modules-UserInt2.vcproj  Modules-UserInt2.vcxproj  Modules.vcproj  Modules.vcxproj  OLD_LICENCE  README.md  aphavoc_gunships.dsp  aphavoc_ui_menu.dsp  autogen.sh  cohokum.dsp  cohokum.dsw  cohokum.sln  cohokum.vcproj  cohokum_msvc6.dsp  configure.in  entity.dsp  entity_mobile.dsp  entity_special.dsp  entity_special_camera.dsp  entity_special_effect.dsp  modules.dsp  modules_3d.dsp  modules_graphics.dsp  modules_userint2.dsp  resource.h
aphavoc/source/: Makefile.am  ai_extrn.c  ai_extrn.h  cdmusic.c  cdmusic.h  cmndline.c  cmndline.h  deinit.c  deinit.h  eechini.c  eechini.h  flight.c  flight.h  game.c  game.h  gfxfiles.c  gfxfiles.h  global.c  global.h  gwutcfg.c  gwutcfg.h  init.c  init.h  install.c  install.h  project.c  project.h  servlog.c  servlog.h  sharedmem.c  sharedmem.h  source.imf  test.c  test.h  update.c  update.h  version.h  wutcfg.c  wutcfg.h
aphavoc/source/ai/: Makefile.am  ai.c  ai.h  ai.imf
aphavoc/source/app3d/: 3d_data.c  3d_data.h  3d_draw.c  3d_draw.h  3d_init.c  3d_init.h  3d_main.c  3d_main.h  3d_snd.c  3d_snd.h  Makefile.am  app3d.h  app3d.imf
aphavoc/source/appsound/: Makefile.am  appsound.h  appsound.imf  atc_data.c  atc_data.h  cpg_data.c  cpg_data.h  fac_data.c  fac_data.h  gc_data.c  gc_data.h  snd_data.c  snd_data.h  snd_init.c  snd_init.h  sys_data.c  sys_data.h  wm1_data.c  wm1_data.h  wm2_data.c  wm2_data.h
aphavoc/source/comms/: Makefile.am  comm_man.c  comm_man.h  comms.c  comms.h  comms.imf  commsserver.c  commsserver.h
aphavoc/source/entity/: Makefile.am  adding-a-value.txt  entity.h  entity.imf
aphavoc/source/events/: Makefile.am  ev_debug.c  ev_debug.h  ev_fns.c  ev_fns.h  events.h  events.imf  userdef.c  userdef.h
aphavoc/source/gameflow/: Makefile.am  gameflow.c  gameflow.h  gameflow.imf
aphavoc/source/gunships/: Makefile.am  gunships.h  gunships.imf
aphavoc/source/misc/: Makefile.am  airspeed.c  airspeed.h  gameexit.c  gameexit.h  language.c  language.h  message.c  message.h  miscell.c  miscell.h  miscell.imf  msg_in.c  msg_in.h  msg_out.c  msg_out.h  scrnshot.c  scrnshot.h  secure.c  secure.h  tags.c  tags.h  terr_db.c  terr_db.h  timeaccl.c  timeaccl.h  tod.c  tod.h
aphavoc/source/ui_menu/: Makefile.am  menus.c  ui_menu.h  ui_menu.imf
modules/: 2d.h  2d.imf  3d.h  3d.imf  Makefile.am  graphics.h  graphics.imf  linuxsystem.h  maths.h  maths.imf  misc.h  misc.imf  multi.h  multi.imf  physics.h  physics.imf  sound.h  sound.imf  system.h  system.imf  system2.h  system2.imf  terrain.h  terrain.imf  userint.h  userint.imf  userint2.h  userint2.imf
modules/2d/: 2dart.c  2dart.h  2dview.c  2dview.h  2dwrap.c  2dwrap.h  Makefile.am
modules/3d/: 3DFUNC.C  3DFUNC.H  3danim.c  3danim.h  3dclip.c  3dclip.h  3dconfig.c  3dconfig.h  3dconstr.c  3dconstr.h  3ddisp.c  3ddisp.h  3denv.c  3denv.h  3denvget.c  3denvset.c  3denvstr.h  3dexplos.c  3dexplos.h  3dfaces.c  3dfaces.h  3dfclip.c  3dfclip.h  3dhoriz.c  3dhoriz.h  3dkeyfr.c  3dkeyfr.h  3dlfaces.c  3dlfaces.h  3dlight.c  3dlight.h  3dline.c  3dline.h  3dmodels.c  3dmodels.h  3dmoon.c  3dmoon.h  3dobjbuf.c  3dobjbuf.h  3dobjdb.c  (+70 more)
modules/3d/clouds/: 3dclouds.c  3dclouds.h  3dtrump.c  3dtrump.h  Makefile.am  clouds.c  clouds.h  clouds.imf
modules/3d/terrain/: Makefile.am  terrain.h  terrbuf.c  terrbuf.h  terrcol.c  terrcol.h  terrcons.c  terrcons.h  terrdata.c  terrdata.h  terrdr.c  terrdr.h  terrdrcl.c  terrdrcl.h  terrelev.c  terrelev.h  terrgeom.c  terrgeom.h  terrmap.c  terrmap.h  terrobjs.c  terrobjs.h  terrre.c  terrre.h  terrrend.c  terrrend.h  terrsel.c  terrsel.h  terrshdr.c  terrshdr.h  terrshre.c  terrshre.h  terrtree.c  terrtree.h  terrtype.c  terrtype.h
modules/graphics/: 3dinst.c  Makefile.am  bin.txt  block.c  block.h  circle.c  circle.h  clip.c  clip.h  colour.c  colour.h  d3d.c  d3d.h  d3dexec.c  d3dexec.h  d3dfog.c  d3dfog.h  d3dline.c  d3dline.h  d3dpoly.c  d3dpoly.h  d3dshare.c  d3dshare.h  d3dstate.c  d3dstate.h  d3dvert.c  d3dvert.h  dassess.c  dassess.h  dirdraw.c  dirdraw.h  dither.c  dresol.c  dresol.h  f3d.c  f3d.h  fillasm.asm  gfxzoom.c  gfxzoom.h  heckfill.c  (+77 more)
modules/graphics/SDL/: Makefile.am  SDL_draw.h
modules/maths/: Makefile.am  constant.c  constant.h  convert.h  fixedpt.c  fixedpt.h  initmath.c  initmath.h  invsqrt.c  invsqrt.h  matrix.c  matrix.h  miscmath.c  miscmath.h  projtile.c  projtile.h  qternion.c  qternion.h  random.c  random.h  range.c  range.h  reciptab.c  reciptab.h  tevent.c  tevent.h  trig.c  trig.h  vector.c  vector.h  vertex.h
modules/misc/: Makefile.am  file_tag.c  file_tag.h  iff.c  iff.h  int_list.c  int_list.h  listitem.h  string.c  string.h
modules/multi/: Makefile.am  directp.c  dpguid.c  server.c
modules/physics/: body.c  body.h  connect.c  connect.h  constrnt.c  constrnt.h  damper.c  damper.h  friction.c  friction.h  object.c  object.h  spring.c  spring.h
modules/sound/: Makefile.am  dirsound.c  dirsound.h  dsound.c  dsound.h  dsound3d.c  dsound3d.h  openal.c  sound_internal.h  soundhlp.c  soundhlp.h  soundman.c  soundman.h
modules/system/: Makefile.am  ascii.c  ascii.h  assert.c  assert.h  cdrom.c  cdrom.h  cpuclock.c  cpuclock.h  debug.c  debug.h  ev_alpha.c  ev_alpha.h  ev_stack.c  ev_stack.h  event.c  event.h  filedir.c  filedir.h  files.c  files.h  fpu.c  fpu.h  input.h  joyevent.c  joystick.c  joystick.h  keyboard.c  keyboard.h  keyevent.c  keyevent.h  keymapping.c  keymapping.h  malloc.c.h  memblock.c  memblock.h  memcmp.c  memory.c  memory.h  mouse.c  (+22 more)
modules/system/unix/: Makefile.am  unix_assert.h  unix_cdrom.c  unix_debug.c  unix_debug.h  unix_filedir.c  unix_filedir.h  unix_files.c  unix_files.h  (+14 more)
modules/userint/: ui_lib.imf  ui_man.c  ui_man.h  ui_paint.c  ui_paint.h
modules/userint2/: Makefile.am  ui_lib.imf  ui_man.c  ui_man.h  ui_paint.c
(+4293 files in other folders)
