noinst_LIBRARIES = lib3d.a
lib3d_a_SOURCES = 3danim.c 3dclip.c 3dconfig.c 3dconstr.c 3ddisp.c 3denvget.c 3denvset.c 3dexplos.c 3dfaces.c 3dfclip.c 3dhoriz.c 3dkeyfr.c 3dlight.c 3dline.c 3dmoon.c 3dobjbuf.c 3dobjdb.c 3dobjdrh.c 3dobjdrw.c 3dobjdrz.c 3dobject.c 3dobjid.c 3dobjvb.c 3dobjvis.c 3dobjzdr.c 3dpixel.c 3drain.c 3dscene.c 3dscon.c 3dshadow.c 3dsprite.c 3dstars.c 3dstrail.c 3dstrike.c 3dsubobj.c 3dsun.c 3dtemp.c 3dtrans.c 3dview.c 3dwface1.c 3dwface2.c
SUBDIRS = clouds terrain
LDADD = clouds/libclouds.a terrain/libterrain.a
INCLUDES = -I$(top_srcdir)/modules -I..
