noinst_LIBRARIES = libgraphics.a
libgraphics_a_SOURCES = block.c circle.c clip.c colour.c d3d.c d3dfog.c d3dpoly.c d3dstate.c d3dvert.c dassess.c dirdraw.c dither.c dresol.c fillasm.asm gfxzoom.c heckfill.c lbm.c line.c mipmap.c monofont.c monosprt.c mouseptr.c palette.c pixel.c pixeltxt.c polyd3d.c polyline.c psdread.c psdwrite.c render.c rgb.c rle.c screens.c shadfill.c tempbuf.c textscrn.c textsys.c textures.c textuser.c tga.c tranbuf.c vcache.c viewport.c zbufasm.asm zbuffer.c
SUBDIRS = external
LDADD = external/libexternal.a
INCLUDES = -I$(top_srcdir)/modules -I..
