noinst_LIBRARIES = libsystem.a
libsystem_a_SOURCES = ascii.c assert.c cdrom.c cpuclock.c debug.c ev_alpha.c ev_stack.c event.c filedir.c files.c fpu.c input.c joyevent.c joystick.c keyboard.c keyevent.c memblock.c memcmp.c memory.c mouse.c safemem.c startup.c sysmess.c time.c timer.c
SUBDIRS = external
LDADD = external/libexternal.a
INCLUDES = -I$(top_srcdir)/modules -I.. -I$(top_srcdir)/aphavoc/source
