noinst_LIBRARIES = libui_menu.a
libui_menu_a_SOURCES = menus.c
SUBDIRS = advert credits modcredits czone exit gametype gunships ingame initsc main multiop options player session sessparm title loading dedicate
LDADD = advert/libadvert.a credits/libcredits.a modcredits/libmodcredits.a czone/libczone.a exit/libexit.a gametype/libgametype.a gunships/libgunships.a ingame/libingame.a initsc/libinitsc.a main/libmain.a multiop/libmultiop.a options/liboptions.a player/libplayer.a session/libsession.a sessparm/libsessparm.a title/libtitle.a loading/libloading.a dedicate/libdedicate.a
INCLUDES = -I$(top_srcdir)/modules -I../.. -I..
