noinst_LTLIBRARIES = libunix.la

SUBDIRS =
LDFLAGS = @STATIC_LIB@
LIBADD =
INCLUDES = -I$(top_srcdir)/modules -I.. -I$(top_srcdir)/aphavoc/source -I-

libunix_la_SOURCES = \
	unix_filedir.c	unix_filedir.h \
	unix_keyboard.c	unix_keyboard.h \
	unix_startup.c	unix_startup.h \
	unix_timer.c	unix_timer.h \
	unix_memory.c	unix_memory.h \
	unix_debug.c	unix_debug.h \
	unix_cdrom.c	unix_cdrom.h \
	unix_sysmess.c	unix_sysmess.h \
	unix_assert.c	unix_assert.h \
	unix_time.c	unix_time.h \
	unix_mouse.c	unix_mouse.h \
	unix_joystick.c	unix_joystick.h \
	unix_files.c	unix_files.h
