noinst_LIBRARIES = libui_obj.a
libui_obj_a_SOURCES = ui_obj.c
SUBDIRS = area button close list menu number radio screen text toggle slider input
LDADD = area/libarea.a button/libbutton.a close/libclose.a list/liblist.a menu/libmenu.a number/libnumber.a radio/libradio.a screen/libscreen.a text/libtext.a toggle/libtoggle.a slider/libslider.a input/libinput.a
INCLUDES = -I$(top_srcdir)/modules -I../.. -I..
