noinst_LIBRARIES = libfixed.a
libfixed_a_SOURCES = fixed.c fx_dbase.c fx_float.c fx_funcs.c fx_int.c fx_list.c fx_msgs.c fx_objdb.c fx_pack.c fx_str.c fx_vec3d.c
SUBDIRS = city crater cbuild object pylon scenic site siteupdt segment
LDADD = city/libcity.a crater/libcrater.a cbuild/libcbuild.a object/libobject.a pylon/libpylon.a scenic/libscenic.a site/libsite.a siteupdt/libsiteupdt.a segment/libsegment.a
INCLUDES = -I$(top_srcdir)/modules -I../../.. -I../.. -I..
