noinst_LIBRARIES = libspecial.a
libspecial_a_SOURCES =
SUBDIRS = bridge camera division effect force group guide keysite landing pilot regen sector session task update waypoint
LDADD = bridge/libbridge.a camera/libcamera.a division/libdivision.a effect/libeffect.a force/libforce.a group/libgroup.a guide/libguide.a keysite/libkeysite.a landing/liblanding.a pilot/libpilot.a regen/libregen.a sector/libsector.a session/libsession.a task/libtask.a update/libupdate.a waypoint/libwaypoint.a
INCLUDES = -I$(top_srcdir)/modules -I../../.. -I../.. -I..
