noinst_LIBRARIES = libsystem.a
libsystem_a_SOURCES =
SUBDIRS = en_attrs en_comms en_debug en_funcs en_main en_msgs en_types
LDADD = en_attrs/liben_attrs.a en_comms/liben_comms.a en_debug/liben_debug.a en_funcs/liben_funcs.a en_main/liben_main.a en_msgs/liben_msgs.a en_types/liben_types.a
INCLUDES = -I$(top_srcdir)/modules -I../../.. -I../.. -I..
