noinst_LIBRARIES = libavionics.a
libavionics_a_SOURCES = avionics.c
SUBDIRS = apache comanche common havoc hokum blackhawk hind ah64a ka50
LDADD = apache/libapache.a comanche/libcomanche.a common/libcommon.a havoc/libhavoc.a hokum/libhokum.a blackhawk/libblackhawk.a hind/libhind.a ah64a/libah64a.a ka50/libka50.a 
INCLUDES = -I$(top_srcdir)/modules -I../../.. -I../.. -I..
