noinst_LIBRARIES = libcockpits.a
libcockpits_a_SOURCES = cockpits.c
SUBDIRS = apache comanche common havoc hokum blackhawk hind
LDADD = apache/libapache.a comanche/libcomanche.a common/libcommon.a havoc/libhavoc.a hokum/libhokum.a blackhawk/libblackhawk.a hind/libhind.a
INCLUDES = -I$(top_srcdir)/modules -I../../.. -I../.. -I..
