noinst_LIBRARIES = libcockpits.a
libcockpits_a_SOURCES = cockpits.c
SUBDIRS = apache comanche common havoc hokum blackhawk hind ah64a ka50 default
LDADD = apache/libapache.a comanche/libcomanche.a common/libcommon.a havoc/libhavoc.a hokum/libhokum.a blackhawk/libblackhawk.a hind/libhind.a ah64a/libah64a.a ka50/libka50.a default/libdefault.a
INCLUDES = -I$(top_srcdir)/modules -I../../.. -I../.. -I..
