noinst_LIBRARIES = libaircraft.a
libaircraft_a_SOURCES = ac_anim.c ac_dbase.c ac_float.c ac_funcs.c ac_int.c ac_list.c ac_msgs.c ac_pack.c ac_ptr.c ac_str.c ac_tgt.c ac_vec3d.c ac_wpn.c aircraft.c
SUBDIRS = fixwing helicop
LDADD = fixwing/libfixwing.a helicop/libhelicop.a
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
