noinst_LIBRARIES = libweapon.a
libweapon_a_SOURCES = damage.c weapon.c wn_anim.c wn_cllsn.c wn_creat.c wn_dbase.c wn_decoy.c wn_draw.c wn_dstry.c wn_float.c wn_funcs.c wn_int.c wn_list.c wn_load.c wn_misc.c wn_move.c wn_msgs.c wn_pack.c wn_selct.c wn_spch.c wn_str.c wn_tgt.c wn_updt.c wn_vec3d.c
SUBDIRS = configs
LDADD = configs/libconfigs.a
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
