noinst_LIBRARIES = libcamera.a
libcamera_a_SOURCES = camera.c cm_actn.c cm_att.c cm_auto.c cm_build.c cm_chase.c cm_cine.c cm_creat.c cm_dbrf.c cm_drop.c cm_dstry.c cm_eject.c cm_end.c cm_explo.c cm_float.c cm_flyby.c cm_funcs.c cm_int.c cm_list.c cm_mode.c cm_msgs.c cm_pack.c cm_ptr.c cm_recog.c cm_rvrs.c cm_satel cm_stat.c cm_updt.c cm_vec3d.c cm_view.c cm_wpn.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
