noinst_LIBRARIES = libeffect.a
libeffect_a_SOURCES = ef_dbase.c ef_funcs.c ef_int.c ef_list.c ef_msgs.c ef_pack.c ef_vec3d.c
SUBDIRS = explosn particle smokelst soundeff sprite
LDADD = explosn/libexplosn.a particle/libparticle.a smokelst/libsmokelst.a soundeff/libsoundeff.a sprite/libsprite.a
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
