noinst_LIBRARIES = libguide.a
libguide_a_SOURCES = aa_attck.c ag_attck.c gd_attck.c gd_cover.c gd_creat.c gd_dbase.c gd_draw.c gd_dstry.c gd_float.c gd_funcs.c gd_int.c gd_list.c gd_msgs.c gd_nav.c gd_pack.c gd_ptr.c gd_updt.c gd_vec3d.c guide.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
