noinst_LIBRARIES = libwaypoint.a
libwaypoint_a_SOURCES = waypoint.c wp_char.c wp_creat.c wp_dbase.c wp_draw.c wp_dstry.c wp_float.c wp_funcs.c wp_int.c wp_list.c wp_msgs.c wp_pack.c wp_ptr.c wp_str.c wp_vec3d.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
