noinst_LIBRARIES = liben_funcs.a
liben_funcs_a_SOURCES = en_att.c en_char.c en_creat.c en_draw.c en_dstry.c en_float.c en_funcs.c en_int.c en_list.c en_pack.c en_ptr.c en_snd.c en_str.c en_updt.c en_vec3d.c
SUBDIRS = en_list
LDADD = en_list/liben_list.a
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
