noinst_LIBRARIES = libcampaign.a
libcampaign_a_SOURCES = ca_3d.c ca_base.c ca_brief.c ca_chat.c ca_dbf.c ca_fsmap.c ca_group.c ca_hist.c ca_info.c ca_list.c ca_log.c ca_map.c ca_menu.c ca_msgs.c ca_save.c ca_selct.c ca_sort.c ca_stat.c ca_wload.c campaign.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../.. -I../../.. -I../.. -I..
