noinst_LIBRARIES = libfixwing.a
libfixwing_a_SOURCES = fixwing.c fw_anim.c fw_creat.c fw_draw.c fw_dstry.c fw_float.c fw_funcs.c fw_int.c fw_list.c fw_move.c fw_msgs.c fw_pack.c fw_tgt.c fw_updt.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../../.. -I../../../.. -I../../.. -I../.. -I..
