noinst_LIBRARIES = libhelicop.a
libhelicop_a_SOURCES = hc_anim.c hc_creat.c hc_draw.c hc_dstry.c hc_float.c hc_funcs.c hc_int.c hc_list.c hc_move.c hc_msgs.c hc_pack.c hc_tgt.c hc_updt.c hc_vec3d.c helicop.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../../.. -I../../../.. -I../../.. -I../.. -I..
