noinst_LIBRARIES = libsmokelst.a
libsmokelst_a_SOURCES = sl_creat.c sl_dbase.c sl_draw.c sl_dstry.c sl_float.c sl_funcs.c sl_int.c sl_list.c sl_meta.c sl_move.c sl_msgs.c sl_pack.c sl_updt.c sl_vec3d.c smokelst.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../../.. -I../../../.. -I../../.. -I../.. -I..
