noinst_LIBRARIES = libsoundeff.a
libsoundeff_a_SOURCES = se_creat.c se_dstry.c se_float.c se_funcs.c se_int.c se_list.c se_msgs.c se_pack.c se_ptr.c se_snd.c se_updt.c se_vec3d.c soundeff.c spch_atc.c spch_cal.c spch_cpg.c spch_dis.c spch_fac.c spch_gc.c spch_hdg.c spch_num.c spch_sys.c spch_wmn.c speech.c
SUBDIRS =
LDADD =
INCLUDES = -I$(top_srcdir)/modules -I../../../../.. -I../../../.. -I../../.. -I../.. -I..
